# mail-parser

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  COPYING  Cargo.toml  README  README.md  flamegraph.sh
.github/workflows/: rust.yml
benches/: bench.rs  libraries.rs  ludicrous.rs  parse.rs
examples/: assert_equal.rs  custom_parser.rs  email_to_json_and_yaml.rs  export_to_json_and_yaml.rs  mailbox_iterate_maildir.rs  mailbox_parse_mbox.rs  message_parse.rs  message_write_attachments.rs  parse_mbox.rs  repro144.rs  write_attachments.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mail_parser.rs
resources/: address.json  content_type.json  date.json  id.json  list.json  received.json  unstructured.json
resources/eml/legacy/: 000.crlf.json  000.json  001.crlf.json  001.json  002.crlf.json  002.json  003.crlf.json  003.json  004.crlf.json  004.json  005.crlf.json  005.json  006.crlf.json  006.json  007.crlf.json  007.json  008.crlf.json  008.json  009.crlf.json  009.json  010.crlf.json  010.json  011.crlf.json  011.json  012.crlf.json  012.json  013.crlf.json  013.json  014.crlf.json  014.json  015.crlf.json  015.json  016.crlf.json  016.json  017.crlf.json  017.json  018.crlf.json  018.json  019.crlf.json  019.json  (+68 more)
resources/eml/malformed/: 000.crlf.json  000.eml  000.json  001.crlf.json  001.json  002.crlf.json  002.json  003.crlf.json  003.eml  003.json  004.crlf.json  004.eml  004.json  005.crlf.json  005.json  006.crlf.json  006.eml  006.json  007.crlf.json  007.eml  007.json  008.crlf.json  008.json  010.crlf.json  010.eml  010.json  011.crlf.json  011.json  012.crlf.json  (+30 more)
src/: cli.rs  lib.rs  main.rs
src/core/: address.rs  body.rs  builder.rs  header.rs  html.rs  message.rs  mod.rs  rkyv.rs
src/decoders/: base64.rs  binary.rs  buffer_writer.rs  bytes.rs  decoder.rs  encoded_word.rs  hex.rs  html.rs  mod.rs  quoted_printable.rs
src/mailbox/: maildir.rs  mbox.rs  mod.rs
src/parsers/: encoded_word.rs  header.rs  mbox.rs  message.rs  message_stream.rs  mime.js  mime.rs  mod.rs  preview.rs  rfc2047.rs  token.rs
tests/: integration_test.rs
tests/html/: 001.html  002.html
tests/legacy/: 000.crlf.json  000.json  000.txt  001.crlf.json  001.eml  001.json  001.txt  002.crlf.json  002.json  002.txt  003.crlf.json  003.json  003.txt  004.json  004.txt  005.crlf.json  005.json  005.txt  006.json  006.txt  007.json  007.txt  008.crlf.json  008.json  008.txt  009.json  009.txt  010.crlf.json  010.json  010.txt  011.crlf.json  011.json  011.txt  012.crlf.json  012.json  012.txt  013.json  013.txt  014.json  014.txt  (+105 more)
tests/malformed/: 000.crlf.json  000.json  000.txt  001.crlf.json  001.eml  001.json  001.txt  002.crlf.json  002.eml  002.json  002.txt  003.json  003.txt  004.crlf.json  004.json  004.txt  005.eml  005.json  005.txt  006.json  006.txt  007.crlf.json  007.json  007.txt  008.eml  008.json  008.txt  009.json  009.txt  010.crlf.json  010.json  010.txt  011.eml  011.json  011.txt  012.crlf.json  012.json  012.txt  013.crlf.json  013.json  (+12 more)
tests/rfc/: 000.crlf.json  000.json  000.txt  001.json  001.txt  002.crlf.json  002.json  002.txt  003.eml  003.json  003.txt  004.crlf.json  004.eml  004.json  004.txt  005.json  005.txt  006.crlf.json  006.json  006.txt  007.json  007.txt  008.crlf.json  008.eml  008.json  008.txt  009.crlf.json  009.eml  009.json
(+40 files in other folders)
