[package]
name = "mail-parser"
description = "Fast and robust e-mail parsing library for Rust"
version = "0.9.4"
edition = "2021"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-parser"
homepage = "https://github.com/stalwartlabs/mail-parser"
keywords = ["email", "mail", "parser", "parse", "mime"]
categories = ["email", "parser-implementations"]
readme = "README.md"
resolver = "2"

[dependencies]
encoding_rs = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
mail-parser = { path = ".", features = ["serde_support", "full_encoding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
chrono = "0.4"

[features]
default = ["full_encoding"]
full_encoding = ["encoding_rs"]
serde_support = ["serde"]
ludicrous_mode = []

[profile.bench]
debug = true
